--- a/index.html
+++ b/index.html
@@ -10,33 +10,28 @@
         --bg-color: var(--tg-theme-bg-color, #fdfcf9);
         --text-color: var(--tg-theme-text-color, #111e1e);
         --hint-color: var(--tg-theme-hint-color, #999);
-        --button-color: var(--tg-theme-button-color, #111e1e);
-        --button-text-color: var(--tg-theme-button-text-color, #ffffff);
+        --button-color: #111e1e;
+        --button-text-color: #ffffff;
       }
-
       body {
         margin: 0;
         padding: 0;
         background: var(--bg-color);
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         color: var(--text-color);
         display: flex;
         flex-direction: column;
-        justify-content: flex-start;
         align-items: center;
         min-height: 100vh;
         padding: 24px;
         text-align: center;
         -webkit-font-smoothing: antialiased;
       }
-
       h1 {
         font-size: 28px;
         font-weight: 600;
         margin-bottom: 32px;
       }
-
       .button {
         background-color: var(--button-color);
         color: var(--button-text-color);
@@ -47,10 +42,9 @@
         margin: 10px 0;
         width: 100%;
         max-width: 320px;
-        box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+        box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         cursor: pointer;
       }
-
       .input-field {
         width: 100%;
         max-width: 320px;
@@ -62,13 +56,11 @@
         background: #fff;
         color: var(--text-color);
       }
-
       .footer {
         font-size: 13px;
         color: var(--hint-color);
         margin-top: 40px;
       }
-
       .hidden {
         display: none;
       }
@@ -76,13 +68,11 @@
   </head>
   <body>
     <h1>честно</h1>
-
     <div id="home-screen">
       <button class="button" onclick="showDealScreen()">Создать сделку</button>
-      <button class="button">Личный кабинет</button>
-      <button class="button">Как это работает</button>
+      <button class="button" onclick="showProfileScreen()">Личный кабинет</button>
+      <button class="button" onclick="showGuideScreen()">Как это работает</button>
     </div>
-
     <div id="deal-screen" class="hidden">
       <input type="text" class="input-field" placeholder="@username участника" />
       <input type="text" class="input-field" placeholder="Описание сделки" />
@@ -90,22 +80,67 @@
       <button class="button" onclick="Telegram.WebApp.MainButton.show(); Telegram.WebApp.MainButton.setText('Подтвердить сделку');">Отправить приглашение</button>
       <button class="button" onclick="showHomeScreen()">Назад</button>
     </div>
-
+    <div id="profile-screen" class="hidden">
+      <p id="tg-id-text" style="margin-bottom: 24px; font-size: 16px;"></p>
+      <button class="button">Мои сделки</button>
+      <button class="button">NFC-паспорт</button>
+      <button class="button">Перейти в TON Wallet</button>
+      <button class="button" onclick="showHomeScreen()">Назад</button>
+    </div>
+    <div id="guide-screen" class="hidden" style="max-width: 600px; width: 100%; padding: 20px; text-align: left;">
+      <h2 style="font-size: 22px; margin-bottom: 24px; font-weight: 600;">Как работает сервис «Честно»</h2>
+      <p style="font-size: 16px; margin-bottom: 20px; line-height: 1.6;">
+        «Честно» — это прозрачный способ договориться и получить оплату, даже если вы не знакомы с человеком лично. Вся логика сделки строится внутри Telegram, без регистрации и посредников.
+      </p>
+      <p style="font-size: 16px; margin-bottom: 16px; line-height: 1.6;"><strong>1. Инициатор создаёт сделку</strong><br/>
+        Он указывает @username второго участника, краткое описание и сумму. Сделка отправляется собеседнику в виде WebApp.</p>
+      <p style="font-size: 16px; margin-bottom: 16px; line-height: 1.6;"><strong>2. Стороны обсуждают условия</strong><br/>
+        Можно загрузить переписку, оферту, примеры работ. AI помогает составить корректный договор на основе переписки или шаблонов.</p>
+      <p style="font-size: 16px; margin-bottom: 16px; line-height: 1.6;"><strong>3. Деньги замораживаются</strong><br/>
+        После согласования условий сумма временно блокируется в TON, USDT или ₽. Исполнитель начинает работу.</p>
+      <p style="font-size: 16px; margin-bottom: 16px; line-height: 1.6;"><strong>4. Завершение сделки</strong><br/>
+        Если работа выполнена, обе стороны подтверждают завершение — и средства переходят исполнителю. Если одна сторона молчит, сделка закрывается автоматически через 48 часов.</p>
+      <p style="font-size: 16px; margin-bottom: 16px; line-height: 1.6;"><strong>5. В случае спора — арбитраж</strong><br/>
+        AI анализирует договор, переписку и доказательства. Решение выносит платформа, ориентируясь на зафиксированные условия. Это защищает обе стороны.</p>
+<p style="font-size: 16px; margin-top: 24px; line-height: 1.6;">
+        «Честно» подходит для фрилансеров, самозанятых, бизнесов и обычных людей. Сделка здесь — это не просто перевод, а защищённая договорённость.
+      </p>
+      <div style="display: flex; justify-content: center; margin-top: 32px;">
+  <button class="button" onclick="showHomeScreen()">Назад</button>
+</div>
+    </div>
     <div class="footer">chestno.online · сервис безопасной сделки</div>
-
     <script>
       Telegram.WebApp.ready();
       Telegram.WebApp.expand();
-
       function showDealScreen() {
-        document.getElementById('home-screen').classList.add('hidden');
+        hideAll();
         document.getElementById('deal-screen').classList.remove('hidden');
       }
-
+      function showProfileScreen() {
+        hideAll();
+        const user = Telegram.WebApp.initDataUnsafe?.user;
+        if (user) {
+          document.getElementById('tg-id-text').textContent = `Ваш Telegram ID: ${user.id}`;
+        } else {
+          document.getElementById('tg-id-text').textContent = 'Telegram ID не определён';
+        }
+        document.getElementById('profile-screen').classList.remove('hidden');
+      }
+      function showGuideScreen() {
+        hideAll();
+        document.getElementById('guide-screen').classList.remove('hidden');
+      }
       function showHomeScreen() {
-        document.getElementById('deal-screen').classList.add('hidden');
+        hideAll();
         document.getElementById('home-screen').classList.remove('hidden');
         Telegram.WebApp.MainButton.hide();
+      }
+      function hideAll() {
+        document.getElementById('home-screen').classList.add('hidden');
+        document.getElementById('deal-screen').classList.add('hidden');
+        document.getElementById('profile-screen').classList.add('hidden');
+        document.getElementById('guide-screen').classList.add('hidden');
       }
     </script>
   </body>
