--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
       :root {
-        --bg-color: var(--tg-theme-bg-color, #fdfcf9);
-        --text-color: var(--tg-theme-text-color, #111e1e);
-        --hint-color: var(--tg-theme-hint-color, #999);
-        --button-color: #111e1e;
-        --button-text-color: #ffffff;
+       :root {
+  --bg-color: var(--tg-theme-bg-color, #fdfcf9);
+  --text-color: var(--tg-theme-text-color, #111e1e);
+  --hint-color: var(--tg-theme-hint-color, #888);
+  --button-color: var(--tg-theme-button-color, #111e1e);
+  --button-text-color: var(--tg-theme-button-text-color, #ffffff);
+  --secondary-bg-color: var(--tg-theme-secondary-bg-color, #ffffff);
       }
       body {
         margin: 0;
