--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   --secondary-bg-color: var(--tg-theme-secondary-bg-color, #ffffff);
       }
       body {
+        background: var(--bg-color);
+        color: var(--text-color);
         margin: 0;
         padding: 0;
         background: var(--bg-color);
