--- a/index.html
+++ b/index.html
@@ -6,22 +6,37 @@
     <title>честно</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
-       :root {
-  --bg-color: var(--tg-theme-bg-color, #fdfcf9);
-  --text-color: var(--tg-theme-text-color, #111e1e);
-  --hint-color: var(--tg-theme-hint-color, #888);
-  --button-color: var(--tg-theme-button-color, #111e1e);
-  --button-text-color: var(--tg-theme-button-text-color, #ffffff);
-  --secondary-bg-color: var(--tg-theme-secondary-bg-color, #ffffff);
+      :root {
+        --button-radius: 12px;
+        --font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       }
+
+      @media (prefers-color-scheme: light) {
+        :root {
+          --bg-color: #fdfcf9;
+          --text-color: #111e1e;
+          --hint-color: #777;
+          --button-color: #111e1e;
+          --button-text-color: #ffffff;
+        }
+      }
+
+      @media (prefers-color-scheme: dark) {
+        :root {
+          --bg-color: #111e1e;
+          --text-color: #ffffff;
+          --hint-color: #aaa;
+          --button-color: #333;
+          --button-text-color: #ffffff;
+        }
+      }
+
       body {
-        background: var(--bg-color);
-        color: var(--text-color);
         margin: 0;
         padding: 0;
         background: var(--bg-color);
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         color: var(--text-color);
+        font-family: var(--font-family);
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -40,7 +55,7 @@
         color: var(--button-text-color);
         border: none;
         padding: 16px;
-        border-radius: 12px;
+        border-radius: var(--button-radius);
         font-size: 16px;
         margin: 10px 0;
         width: 100%;
