--- a/index.html
+++ b/index.html
@@ -1,150 +1,166 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>честно</title>
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <style>
-       :root {
-  --bg-color: var(--tg-theme-bg-color, #fdfcf9);
-  --text-color: var(--tg-theme-text-color, #111e1e);
-  --hint-color: var(--tg-theme-hint-color, #888);
-  --button-color: var(--tg-theme-button-color, #111e1e);
-  --button-text-color: var(--tg-theme-button-text-color, #ffffff);
-  --secondary-bg-color: var(--tg-theme-secondary-bg-color, #ffffff);
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>честно</title>
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+
+  <style>
+    :root {
+      --bg-color: #fdfcf9;             /* светлый фон */
+      --text-color: #111e1e;            /* тёмный текст */
+      --button-color: #111e1e;          /* тёмная кнопка */
+      --button-text-color: #fdfcf9;     /* цвет текста кнопки = фон */
+    }
+
+    @media (prefers-color-scheme: dark) {
+      :root {
+        --bg-color: #111e1e;            /* тёмный фон */
+        --text-color: #fdfcf9;           /* светлый текст */
+        --button-color: #fdfcf9;         /* светлая кнопка */
+        --button-text-color: #111e1e;    /* цвет текста кнопки = фон */
       }
-      body {
-        background: var(--bg-color);
-        color: var(--text-color);
-        margin: 0;
-        padding: 0;
-        background: var(--bg-color);
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        color: var(--text-color);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        min-height: 100vh;
-        padding: 24px;
-        text-align: center;
-        -webkit-font-smoothing: antialiased;
-      }
-      h1 {
-        font-size: 28px;
-        font-weight: 600;
-        margin-bottom: 32px;
-      }
-      .button {
-        background-color: var(--button-color);
-        color: var(--button-text-color);
-        border: none;
-        padding: 16px;
-        border-radius: 12px;
-        font-size: 16px;
-        margin: 10px 0;
-        width: 100%;
-        max-width: 320px;
-        box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        cursor: pointer;
-      }
-      .input-field {
-        width: 100%;
-        max-width: 320px;
-        padding: 14px;
-        margin-bottom: 16px;
-        border-radius: 10px;
-        border: 1px solid #ddd;
-        font-size: 16px;
-        background: #fff;
-        color: var(--text-color);
-      }
-      .footer {
-        font-size: 13px;
-        color: var(--hint-color);
-        margin-top: 40px;
-      }
-      .hidden {
-        display: none;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>честно</h1>
-    <div id="home-screen">
-      <button class="button" onclick="showDealScreen()">Создать сделку</button>
-      <button class="button" onclick="showProfileScreen()">Личный кабинет</button>
-      <button class="button" onclick="showGuideScreen()">Как это работает</button>
-    </div>
-    <div id="deal-screen" class="hidden">
-      <input type="text" class="input-field" placeholder="@username участника" />
-      <input type="text" class="input-field" placeholder="Описание сделки" />
-      <input type="text" class="input-field" placeholder="Сумма (TON / USDT / ₽)" />
-      <button class="button" onclick="Telegram.WebApp.MainButton.show(); Telegram.WebApp.MainButton.setText('Подтвердить сделку');">Отправить приглашение</button>
+    }
+
+    body {
+      background-color: var(--bg-color);
+      color: var(--text-color);
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      margin: 0;
+      padding: 24px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
+      text-align: center;
+      -webkit-font-smoothing: antialiased;
+    }
+
+    h1 {
+      font-size: 28px;
+      font-weight: 600;
+      margin-bottom: 32px;
+    }
+
+    .button {
+      background-color: var(--button-color);
+      color: var(--button-text-color);
+      border: none;
+      padding: 16px;
+      border-radius: 12px;
+      font-size: 16px;
+      margin: 10px 0;
+      width: 100%;
+      max-width: 320px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      cursor: pointer;
+    }
+
+    .footer {
+      font-size: 13px;
+      color: var(--text-color);
+      margin-top: 40px;
+    }
+
+    .hidden {
+      display: none;
+    }
+  </style>
+</head>
+
+<body>
+  <h1>честно</h1>
+  
+  <div id="home-screen">
+    <button class="button" onclick="showDealScreen()">Создать сделку</button>
+    <button class="button" onclick="showProfileScreen()">Личный кабинет</button>
+    <button class="button" onclick="showGuideScreen()">Как это работает</button>
+  </div>
+
+  <div id="deal-screen" class="hidden">
+    <input type="text" class="input-field" placeholder="@username участника" />
+    <input type="text" class="input-field" placeholder="Описание сделки" />
+    <input type="text" class="input-field" placeholder="Сумма (TON / USDT / ₽)" />
+    <button class="button" onclick="Telegram.WebApp.MainButton.show(); Telegram.WebApp.MainButton.setText('Подтвердить сделку');">Отправить приглашение</button>
+    <button class="button" onclick="showHomeScreen()">Назад</button>
+  </div>
+
+  <div id="profile-screen" class="hidden">
+    <p id="tg-id-text" style="margin-bottom: 24px; font-size: 16px;"></p>
+    <button class="button">Мои сделки</button>
+    <button class="button">NFC-паспорт</button>
+    <button class="button">Перейти в TON Wallet</button>
+    <button class="button" onclick="showHomeScreen()">Назад</button>
+  </div>
+
+  <div id="guide-screen" class="hidden" style="max-width: 600px; width: 100%; padding: 20px; text-align: left;">
+    <h2 style="font-size: 22px; margin-bottom: 24px; font-weight: 600;">Как работает сервис «Честно»</h2>
+    <p style="font-size: 16px; margin-bottom: 20px; line-height: 1.6;">
+      «Честно» — это прозрачный способ договориться и получить оплату, даже если вы не знакомы с человеком лично. Вся логика сделки строится внутри Telegram, без регистрации и посредников.
+    </p>
+    <p style="font-size: 16px; margin-bottom: 16px; line-height: 1.6;"><strong>1. Инициатор создаёт сделку</strong><br/>
+      Указывает @username второго участника, краткое описание и сумму. Сделка отправляется собеседнику в виде WebApp.
+    </p>
+    <p style="font-size: 16px; margin-bottom: 16px; line-height: 1.6;"><strong>2. Стороны обсуждают условия</strong><br/>
+      Можно загрузить переписку, оферту, примеры работ. AI помогает составить договор на основе переписки или шаблонов.
+    </p>
+    <p style="font-size: 16px; margin-bottom: 16px; line-height: 1.6;"><strong>3. Деньги замораживаются</strong><br/>
+      После согласования условий сумма блокируется в TON, USDT или ₽. Исполнитель начинает работу.
+    </p>
+    <p style="font-size: 16px; margin-bottom: 16px; line-height: 1.6;"><strong>4. Завершение сделки</strong><br/>
+      Если работа выполнена, обе стороны подтверждают — средства переходят исполнителю. Если одна сторона молчит — сделка закрывается через 48 часов.
+    </p>
+    <p style="font-size: 16px; margin-bottom: 16px; line-height: 1.6;"><strong>5. В случае спора — арбитраж</strong><br/>
+      AI анализирует договор, переписку и доказательства. Решение принимает платформа по условиям сделки. Это защищает обе стороны.
+    </p>
+    <p style="font-size: 16px; margin-top: 24px; line-height: 1.6;">
+      «Честно» подходит для фрилансеров, самозанятых, бизнесов и обычных людей. Сделка — не просто перевод, а защищённая договорённость.
+    </p>
+    <div style="display: flex; justify-content: center; margin-top: 32px;">
       <button class="button" onclick="showHomeScreen()">Назад</button>
     </div>
-    <div id="profile-screen" class="hidden">
-      <p id="tg-id-text" style="margin-bottom: 24px; font-size: 16px;"></p>
-      <button class="button">Мои сделки</button>
-      <button class="button">NFC-паспорт</button>
-      <button class="button">Перейти в TON Wallet</button>
-      <button class="button" onclick="showHomeScreen()">Назад</button>
-    </div>
-    <div id="guide-screen" class="hidden" style="max-width: 600px; width: 100%; padding: 20px; text-align: left;">
-      <h2 style="font-size: 22px; margin-bottom: 24px; font-weight: 600;">Как работает сервис «Честно»</h2>
-      <p style="font-size: 16px; margin-bottom: 20px; line-height: 1.6;">
-        «Честно» — это прозрачный способ договориться и получить оплату, даже если вы не знакомы с человеком лично. Вся логика сделки строится внутри Telegram, без регистрации и посредников.
-      </p>
-      <p style="font-size: 16px; margin-bottom: 16px; line-height: 1.6;"><strong>1. Инициатор создаёт сделку</strong><br/>
-        Он указывает @username второго участника, краткое описание и сумму. Сделка отправляется собеседнику в виде WebApp.</p>
-      <p style="font-size: 16px; margin-bottom: 16px; line-height: 1.6;"><strong>2. Стороны обсуждают условия</strong><br/>
-        Можно загрузить переписку, оферту, примеры работ. AI помогает составить корректный договор на основе переписки или шаблонов.</p>
-      <p style="font-size: 16px; margin-bottom: 16px; line-height: 1.6;"><strong>3. Деньги замораживаются</strong><br/>
-        После согласования условий сумма временно блокируется в TON, USDT или ₽. Исполнитель начинает работу.</p>
-      <p style="font-size: 16px; margin-bottom: 16px; line-height: 1.6;"><strong>4. Завершение сделки</strong><br/>
-        Если работа выполнена, обе стороны подтверждают завершение — и средства переходят исполнителю. Если одна сторона молчит, сделка закрывается автоматически через 48 часов.</p>
-      <p style="font-size: 16px; margin-bottom: 16px; line-height: 1.6;"><strong>5. В случае спора — арбитраж</strong><br/>
-        AI анализирует договор, переписку и доказательства. Решение выносит платформа, ориентируясь на зафиксированные условия. Это защищает обе стороны.</p>
-<p style="font-size: 16px; margin-top: 24px; line-height: 1.6;">
-        «Честно» подходит для фрилансеров, самозанятых, бизнесов и обычных людей. Сделка здесь — это не просто перевод, а защищённая договорённость.
-      </p>
-      <div style="display: flex; justify-content: center; margin-top: 32px;">
-  <button class="button" onclick="showHomeScreen()">Назад</button>
-</div>
-    </div>
-    <div class="footer">chestno.online · сервис безопасной сделки</div>
-    <script>
-      Telegram.WebApp.ready();
-      Telegram.WebApp.expand();
-      function showDealScreen() {
-        hideAll();
-        document.getElementById('deal-screen').classList.remove('hidden');
+  </div>
+
+  <div class="footer">chestno.online · сервис безопасной сделки</div>
+
+  <script>
+    Telegram.WebApp.ready();
+    Telegram.WebApp.expand();
+
+    function showDealScreen() {
+      hideAll();
+      document.getElementById('deal-screen').classList.remove('hidden');
+    }
+
+    function showProfileScreen() {
+      hideAll();
+      const user = Telegram.WebApp.initDataUnsafe?.user;
+      if (user) {
+        document.getElementById('tg-id-text').textContent = `Ваш Telegram ID: ${user.id}`;
+      } else {
+        document.getElementById('tg-id-text').textContent = 'Telegram ID не определён';
       }
-      function showProfileScreen() {
-        hideAll();
-        const user = Telegram.WebApp.initDataUnsafe?.user;
-        if (user) {
-          document.getElementById('tg-id-text').textContent = `Ваш Telegram ID: ${user.id}`;
-        } else {
-          document.getElementById('tg-id-text').textContent = 'Telegram ID не определён';
-        }
-        document.getElementById('profile-screen').classList.remove('hidden');
-      }
-      function showGuideScreen() {
-        hideAll();
-        document.getElementById('guide-screen').classList.remove('hidden');
-      }
-      function showHomeScreen() {
-        hideAll();
-        document.getElementById('home-screen').classList.remove('hidden');
-        Telegram.WebApp.MainButton.hide();
-      }
-      function hideAll() {
-        document.getElementById('home-screen').classList.add('hidden');
-        document.getElementById('deal-screen').classList.add('hidden');
-        document.getElementById('profile-screen').classList.add('hidden');
-        document.getElementById('guide-screen').classList.add('hidden');
-      }
-    </script>
-  </body>
+      document.getElementById('profile-screen').classList.remove('hidden');
+    }
+
+    function showGuideScreen() {
+      hideAll();
+      document.getElementById('guide-screen').classList.remove('hidden');
+    }
+
+    function showHomeScreen() {
+      hideAll();
+      document.getElementById('home-screen').classList.remove('hidden');
+      Telegram.WebApp.MainButton.hide();
+    }
+
+    function hideAll() {
+      document.getElementById('home-screen').classList.add('hidden');
+      document.getElementById('deal-screen').classList.add('hidden');
+      document.getElementById('profile-screen').classList.add('hidden');
+      document.getElementById('guide-screen').classList.add('hidden');
+    }
+  </script>
+</body>
 </html>
