--- a/index.html
+++ b/index.html
@@ -5,69 +5,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>честно</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <style>
-       :root {
-  --bg-color: var(--tg-theme-bg-color, #fdfcf9);
-  --text-color: var(--tg-theme-text-color, #111e1e);
-  --hint-color: var(--tg-theme-hint-color, #888);
-  --button-color: var(--tg-theme-button-color, #111e1e);
-  --button-text-color: var(--tg-theme-button-text-color, #ffffff);
-  --secondary-bg-color: var(--tg-theme-secondary-bg-color, #ffffff);
-      }
-      body {
-        background: var(--bg-color);
-        color: var(--text-color);
-        margin: 0;
-        padding: 0;
-        background: var(--bg-color);
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        color: var(--text-color);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        min-height: 100vh;
-        padding: 24px;
-        text-align: center;
-        -webkit-font-smoothing: antialiased;
-      }
-      h1 {
-        font-size: 28px;
-        font-weight: 600;
-        margin-bottom: 32px;
-      }
-      .button {
-        background-color: var(--button-color);
-        color: var(--button-text-color);
-        border: none;
-        padding: 16px;
-        border-radius: 12px;
-        font-size: 16px;
-        margin: 10px 0;
-        width: 100%;
-        max-width: 320px;
-        box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        cursor: pointer;
-      }
-      .input-field {
-        width: 100%;
-        max-width: 320px;
-        padding: 14px;
-        margin-bottom: 16px;
-        border-radius: 10px;
-        border: 1px solid #ddd;
-        font-size: 16px;
-        background: #fff;
-        color: var(--text-color);
-      }
-      .footer {
-        font-size: 13px;
-        color: var(--hint-color);
-        margin-top: 40px;
-      }
-      .hidden {
-        display: none;
-      }
-    </style>
+<style>
+  :root {
+    --bg-color: #fdfcf9;
+    --main-color: #1c1c1c;
+    --button-text-color: #fdfcf9;
+  }
+  body {
+    background-color: var(--bg-color);
+    color: var(--main-color);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
+    padding: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100vh;
+    text-align: center;
+    -webkit-font-smoothing: antialiased;
+  }
+  h1 {
+    font-size: 28px;
+    font-weight: 600;
+    margin-bottom: 32px;
+    color: var(--main-color);
+  }
+  .button {
+    background-color: var(--main-color);
+    color: var(--button-text-color);
+    border: none;
+    padding: 16px;
+    border-radius: 12px;
+    font-size: 16px;
+    margin: 10px 0;
+    width: 100%;
+    max-width: 320px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+  }
+  .footer {
+    font-size: 13px;
+    color: var(--main-color)
+    margin-top: 40px;
+  }
+  .hidden {
+    display: none;
+  }
+</style>
   </head>
   <body>
     <h1>честно</h1>
