--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 <style>
   :root {
-    --bg-color: #fdfcf9;
-    --main-color: #1c1c1c;
-    --button-text-color: #fdfcf9;
+    --bg-color: #1c1c1c;
+    --main-color: #fdfcf9;
+    --button-text-color: #1c1c1c;
   }
   body {
     background-color: var(--bg-color);
