--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <style>
        :root {
   --bg-color: var(--tg-theme-bg-color, #fdfcf9);
-  --text-color: var(--tg-theme-text-color, #111e1e);
+  --text-color: var(--tg-theme-text-color, #0f0f0f);
   --hint-color: var(--tg-theme-hint-color, #888);
-  --button-color: var(--tg-theme-button-color, #111e1e);
+  --button-color: var(--tg-theme-button-color, #0f0f0f);
   --button-text-color: var(--tg-theme-button-text-color, #ffffff);
   --secondary-bg-color: var(--tg-theme-secondary-bg-color, #ffffff);
       }
