--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   --text-color: var(--tg-theme-text-color, #0f0f0f);
   --hint-color: var(--tg-theme-hint-color, #888);
   --button-color: var(--tg-theme-button-color, #0f0f0f);
-  --button-text-color: var(--tg-theme-button-text-color, #ffffff);
-  --secondary-bg-color: var(--tg-theme-secondary-bg-color, #ffffff);
+  --button-text-color: var(--tg-theme-button-text-color, #fdfcf9);
+  --secondary-bg-color: var(--tg-theme-secondary-bg-color, #0f0f0f);
       }
       body {
         background: var(--bg-color);
