--- a/index.html
+++ b/index.html
@@ -37,14 +37,19 @@
         background-color: var(--button-color);
         color: var(--button-text-color);
         border: none;
-        padding: 16px;
+        padding: 14px;
         border-radius: 12px;
         font-size: 16px;
-        margin: 10px 0;
+        margin-bottom: 10px;
         width: 100%;
         max-width: 320px;
-        box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         cursor: pointer;
+      }
+      .button.secondary {
+        background-color: transparent;
+        color: var(--text-color);
+        border: 1px solid var(--text-color);
       }
       .input-field {
         width: 100%;
@@ -65,15 +70,46 @@
       .hidden {
         display: none;
       }
-      #profile-info {
-        margin-top: 20px;
+      .profile-card {
+        width: 100%;
+        max-width: 320px;
+        background: var(--bg-color);
+        padding: 20px;
+        border-radius: 12px;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        margin-bottom: 20px;
       }
-      #profile-info img {
-        margin-top: 20px;
-        width: 100px;
-        height: 100px;
+      .profile-info {
+        display: flex;
+        align-items: center;
+      }
+      .avatar {
+        width: 64px;
+        height: 64px;
         border-radius: 50%;
         object-fit: cover;
+        margin-right: 16px;
+      }
+      .user-details {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      .user-name {
+        font-weight: bold;
+        font-size: 18px;
+        margin-bottom: 4px;
+      }
+      .user-username,
+      .user-id {
+        font-size: 14px;
+        color: var(--hint-color);
+      }
+      .button-group {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        max-width: 320px;
       }
     </style>
   </head>
@@ -89,19 +125,25 @@
       <input type="text" class="input-field" placeholder="Описание сделки" />
       <input type="text" class="input-field" placeholder="Сумма (TON / USDT / ₽)" />
       <button class="button" onclick="Telegram.WebApp.MainButton.show(); Telegram.WebApp.MainButton.setText('Подтвердить сделку');">Отправить приглашение</button>
-      <button class="button" onclick="showHomeScreen()">Назад</button>
+      <button class="button secondary" onclick="showHomeScreen()">Назад</button>
     </div>
     <div id="profile-screen" class="hidden">
-      <div id="profile-info">
-        <p id="tg-id"></p>
-        <p id="tg-username"></p>
-        <p id="tg-name"></p>
-        <img id="tg-photo" style="display: none;" />
+      <div class="profile-card">
+        <div class="profile-info">
+          <img id="tg-photo" src="" alt="Аватар" class="avatar" />
+          <div class="user-details">
+            <div class="user-name" id="tg-name">Имя</div>
+            <div class="user-username" id="tg-username">@username</div>
+            <div class="user-id" id="tg-id">ID: 123456789</div>
+          </div>
+        </div>
       </div>
-      <button class="button">Мои сделки</button>
-      <button class="button">NFC-паспорт</button>
-      <button class="button">Перейти в TON Wallet</button>
-      <button class="button" onclick="showHomeScreen()">Назад</button>
+      <div class="button-group">
+        <button class="button">Мои сделки</button>
+        <button class="button">NFC-паспорт</button>
+        <button class="button">Перейти в TON Wallet</button>
+        <button class="button secondary" onclick="showHomeScreen()">Назад</button>
+      </div>
     </div>
     <div id="guide-screen" class="hidden" style="max-width: 600px; width: 100%; padding: 20px; text-align: left;">
       <h2 style="font-size: 22px; margin-bottom: 24px; font-weight: 600;">Как работает сервис «Честно»</h2>
@@ -109,20 +151,20 @@
         «Честно» — это прозрачный способ договориться и получить оплату, даже если вы не знакомы с человеком лично. Вся логика сделки строится внутри Telegram, без регистрации и посредников.
       </p>
       <p style="font-size: 16px; margin-bottom: 16px; line-height: 1.6;"><strong>1. Инициатор создаёт сделку</strong><br/>
-        Он указывает @username второго участника, краткое описание и сумму. Сделка отправляется собеседнику в виде WebApp.</p>
+        Указывает @username второго участника, описание и сумму. Сделка отправляется собеседнику в виде WebApp.</p>
       <p style="font-size: 16px; margin-bottom: 16px; line-height: 1.6;"><strong>2. Стороны обсуждают условия</strong><br/>
-        Можно загрузить переписку, оферту, примеры работ. AI помогает составить корректный договор на основе переписки или шаблонов.</p>
+        Можно загрузить переписку, оферту, примеры работ. AI помогает составить корректный договор на основе переписки.</p>
       <p style="font-size: 16px; margin-bottom: 16px; line-height: 1.6;"><strong>3. Деньги замораживаются</strong><br/>
-        После согласования условий сумма временно блокируется в TON, USDT или ₽. Исполнитель начинает работу.</p>
+        После согласования условий сумма временно блокируется в TON, USDT или ₽.</p>
       <p style="font-size: 16px; margin-bottom: 16px; line-height: 1.6;"><strong>4. Завершение сделки</strong><br/>
-        Если работа выполнена, обе стороны подтверждают завершение — и средства переходят исполнителю. Если одна сторона молчит, сделка закрывается автоматически через 48 часов.</p>
+        Если работа выполнена, обе стороны подтверждают завершение — и средства переходят исполнителю.</p>
       <p style="font-size: 16px; margin-bottom: 16px; line-height: 1.6;"><strong>5. В случае спора — арбитраж</strong><br/>
-        AI анализирует договор, переписку и доказательства. Решение выносит платформа, ориентируясь на зафиксированные условия. Это защищает обе стороны.</p>
+        AI анализирует договор, переписку и доказательства. Решение выносит платформа.</p>
       <p style="font-size: 16px; margin-top: 24px; line-height: 1.6;">
         «Честно» подходит для фрилансеров, самозанятых, бизнесов и обычных людей. Сделка здесь — это не просто перевод, а защищённая договорённость.
       </p>
       <div style="display: flex; justify-content: center; margin-top: 32px;">
-        <button class="button" onclick="showHomeScreen()">Назад</button>
+        <button class="button secondary" onclick="showHomeScreen()">Назад</button>
       </div>
     </div>
     <div class="footer">chestno.online · сервис безопасной сделки</div>
@@ -138,17 +180,15 @@
         const user = Telegram.WebApp.initDataUnsafe?.user;
         if (user) {
           document.getElementById('tg-id').textContent = `ID: ${user.id}`;
-          document.getElementById('tg-username').textContent = `Username: @${user.username || 'нет'}`;
+          document.getElementById('tg-username').textContent = `@${user.username || 'нет'}`;
           document.getElementById('tg-name').textContent = `${user.first_name || ''} ${user.last_name || ''}`.trim();
           if (user.photo_url) {
-            const photo = document.getElementById('tg-photo');
-            photo.src = user.photo_url;
-            photo.style.display = 'block';
+            document.getElementById('tg-photo').src = user.photo_url;
           } else {
             document.getElementById('tg-photo').style.display = 'none';
           }
         } else {
-          document.getElementById('tg-id').textContent = `Нет данных пользователя`;
+          document.getElementById('tg-id').textContent = 'Нет данных пользователя';
         }
         document.getElementById('profile-screen').classList.remove('hidden');
       }
