--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
         if (user) {
           document.getElementById('tg-name').textContent = `${user.first_name || ''} ${user.last_name || ''}`.trim();
           document.getElementById('tg-username').textContent = `@${user.username || 'нет'}`;
+           document.getElementById('tg-id').textContent = `ID: ${user.id}`;
           if (user.photo_url) {
             document.getElementById('tg-photo').src = user.photo_url;
           } else {
