--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <div id="deal-screen" class="hidden">
       <input type="text" id="deal-username" class="input-field" placeholder="@username участника" />
       <input type="text" id="deal-description" class="input-field" placeholder="Описание сделки" />
-      <input type="text" id="deal-amount" class="input-field" placeholder="Сумма (TON / USDT / ₽)" />
+      <input type="text" id="deal-amount" class="input-field" placeholder="Сумма" />
       <button class="button" onclick="sendInvite()">Отправить приглашение</button>
       <button class="button" onclick="showHomeScreen()">Назад</button>
     </div>
@@ -116,13 +116,13 @@
       </div>
       <button class="button">Мои сделки</button>
       <button class="button">NFC-паспорт</button>
-      <button class="button">Перейти в TON Wallet</button>
+      <button class="button">TON Wallet</button>
       <button class="button" onclick="showHomeScreen()">Назад</button>
     </div>
     <div id="guide-screen" class="hidden" style="max-width: 600px; width: 100%; padding: 20px; text-align: left;">
       <h2 style="font-size: 22px; margin-bottom: 24px; font-weight: 600;">Как работает сервис «Честно»</h2>
       <p style="font-size: 16px; margin-bottom: 20px; line-height: 1.6;">
-        «Честно» — это прозрачный способ договориться и получить оплату, даже если вы не знакомы с человеком лично. Вся логика сделки строится внутри Telegram, без регистрации и посредников.
+        «Честно» — платформа для прямых договорённостей с гарантией выполнения и ИИ-арбитражем.
       </p>
       <p style="font-size: 16px; margin-bottom: 16px; line-height: 1.6;"><strong>1. Инициатор создаёт сделку</strong><br/>
         Указывает @username второго участника, краткое описание и сумму.</p>
