--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     </div>
     <div id="guide-screen" class="hidden" style="max-width: 600px; width: 100%; padding: 20px; text-align: left;">
       <p style="font-size: 16px; margin-bottom: 20px; line-height: 1.6;">
-        «Честно» — платформа для прямых договорённостей с гарантией выполнения и ИИ-арбитражем.
+        Это платформа для прямых договорённостей с гарантией выполнения и ИИ-арбитражем.
       </p>
       <p style="font-size: 16px; margin-bottom: 16px; line-height: 1.6;"><strong>1. Инициатор создаёт сделку</strong><br/>
         Указывает @username второго участника, краткое описание и сумму.</p>
