--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
       <button class="button" onclick="showGuideScreen()">Как это работает</button>
     </div>
     <div id="deal-screen" class="hidden">
-      <input type="text" id="deal-username" class="input-field" placeholder="@username участника" />
-      <input type="text" id="deal-description" class="input-field" placeholder="Описание сделки" />
-      <input type="text" id="deal-amount" class="input-field" placeholder="Сумма" />
-      <button class="button" onclick="sendInvite()">Отправить приглашение</button>
+       <button class="button" onclick="openAIChat()">Создать чат с ИИ</button>
+  <button class="button" onclick="showUploadScreen()">Загрузить условия вручную</button>
+  <button class="button" onclick="showHomeScreen()">Назад</button>
+</div>
       <button class="button" onclick="showHomeScreen()">Назад</button>
     </div>
     <div id="profile-screen" class="hidden">
