--- a/index.html
+++ b/index.html
@@ -174,6 +174,9 @@
         document.getElementById('profile-screen').classList.add('hidden');
         document.getElementById('guide-screen').classList.add('hidden');
       }
+      function openAIChat() {
+  window.open("https://t.me/chestno_ai_bot?startgroup=start", "_blank");
+}
     </script>
   </body>
 </html>
