--- a/index.html
+++ b/index.html
@@ -122,8 +122,7 @@
       </div>
       <button class="button">Мои сделки</button>
       <button class="button">NFC-паспорт</button>
-      <button class="button">TON Wallet</button>
-      <button class="button" onclick="connectTonWallet()">Подключить TON Wallet</button>
+      <button class="button"onclick="connectTonWallet()">TON Wallet</button>
       <div id="ton-connect-button"></div>
       <button class="button" onclick="showHomeScreen()">Назад</button>
     </div>
